@@ -7,6 +7,7 @@ SceUID _test_sceIoDopen(const char* path)
 {
 	SceUID ret = sceIoDopen(path);
 
+#ifdef REESTIMATE_SYSCALL
 	int i = -1;
 	while (ret < 0 && i < MAX_REESTIMATE_ATTEMPTS)
 	{
@@ -15,6 +16,7 @@ SceUID _test_sceIoDopen(const char* path)
 		reestimate_syscall("IoFileMgrForUser", 0xb29ddf9c, *(u32*)ADDR_HBL_STUBS_BLOCK_ADDR + 0x0028, i);	
 		ret = sceIoDopen(path);
 	}	
+#endif
 	
 	return ret;
 }
@@ -23,6 +25,7 @@ int _test_sceIoDread(SceUID id, SceIoDirent* entry)
 {
 	int ret = sceIoDread(id, entry);
 
+#ifdef REESTIMATE_SYSCALL
 	int i = -1;
 	while (ret < 0 && i < MAX_REESTIMATE_ATTEMPTS)
 	{
@@ -30,7 +33,8 @@ int _test_sceIoDread(SceUID id, SceIoDirent* entry)
 		LOGSTR1("Reestimating sceIoDread -> Method: %d\n", i);
 		reestimate_syscall("IoFileMgrForUser", 0xe3eb004c, *(u32*)ADDR_HBL_STUBS_BLOCK_ADDR + 0x0030, i);
 		ret = sceIoDread(id, entry);
-	}	
+	}
+#endif
 
 	return ret;
 }
@@ -38,7 +42,8 @@ int _test_sceIoDread(SceUID id, SceIoDirent* entry)
 int _test_sceIoDclose(SceUID id)
 {
 	int ret = sceIoDclose(id);
-	
+
+#ifdef REESTIMATE_SYSCALL
 	int i = -1;
 	while (ret < 0 && i < MAX_REESTIMATE_ATTEMPTS)
 	{
@@ -47,6 +52,7 @@ int _test_sceIoDclose(SceUID id)
 		reestimate_syscall("IoFileMgrForUser", 0xeb092469, *(u32*)ADDR_HBL_STUBS_BLOCK_ADDR + 0x0038, i);
 		ret = sceIoDclose(id);
 	}
+#endif
 
 	return ret;
 }
